[package]
name = "aio-coding-hub"
version = "0.12.0"
description = "AIO Coding Hub"
authors = ["dyndynjyxa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aio_coding_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
futures-core = "0.3"
flate2 = "1.1.5"
zip = "4.6.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

[patch.crates-io]
# Patch `tauri-plugin-notification` to ensure macOS debug/dev notifications use this app's identifier
# (instead of `com.apple.Terminal`), so the notification icon matches the app.
tauri-plugin-notification = { path = "patches/tauri-plugin-notification" }
auto-launch = { path = "patches/auto-launch" }
